--- a/relazione/sezioni/introduzione.tex
+++ b/relazione/sezioni/introduzione.tex
@@ -1,9 +1,18 @@
 \chapter{Introduzione\label{sec:introduzione}}
-\lettrine[findent=1.5em]{T}odo.
+\lettrine[findent=1.5em]{L}a relazione descrive il progetto di Mobile Programming svolto da Matteo Marchiori e Giovanni Peron e consiste in un'applicazione mobile con elementi di gamification.
 
-\section{Todo\label{sec:todo}}
+\section{Obiettivi del progetto\label{sec:obiettivi}}
+Gli obiettivi del progetto sono:
+\begin{itemize}
+    \item sviluppare un'applicazione mobile cross-platform;
+    \item studiare e implementare alcune tecniche di gamification;
+\end{itemize}
 
-\subsection{Todo\label{sec:todo}}
-%TODO parlare in generale del progetto.
+\section{Descrizione generale\label{sec:descrizione}}
+IsTrainFree è un'applicazione mobile cross-platform utile agli utenti che usano i treni regionali per viaggiare da un posto all'altro. Dopo aver scelto il treno che vuole prendere, l'utente diventa un giudice e dà un voto alla carrozza del treno in cui si trova. Ogni utente può vedere la media dei voti dati al treno fino a quel momento, in modo da capire se conviene prendere quel treno o un altro, oppure cambiare mezzo di trasporto.
+
+Gli elementi di gamification introdotti servono per coinvolgere l'utente e renderlo abituato all'uso dell'applicazione, di modo da farlo sentire soddisfatto e in modo da far crescere il numero di utenti che usano l'applicazione soprattutto in fase iniziale.
 
 \section{Utenti target}
+Il pubblico di utenti che abbiamo considerato è generico e vario, perché chiunque può prendere un treno.
+L'applicazione vuole fornire un servizio ai viaggiatori che abitualmente prendono già il treno e coinvolgere e invogliare gli utenti meno abituali ad usare un mezzo più ecosostenibile rispetto ad altri.
